# BMC-Installer

./: Cargo.toml  deny.toml
.cargo/: config
src/: bin_shared.rs  image.rs  lib.rs  turing_pi.rs  util.rs
src/format/: mod.rs  raw.rs
src/nand/: mod.rs  mtd.rs
src/turing_pi/: board_info.rs  led.rs
src/ubi/: format.rs  headers.rs  mod.rs  scan.rs  ubinize.rs
